--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@angular/animations": "~10.1.5",
     "@angular/cdk": "^10.2.4",
-    "@angular/cli": "~10.1.5",
     "@angular/common": "~10.1.5",
     "@angular/compiler": "~10.1.5",
     "@angular/compiler-cli": "~10.1.5",
@@ -36,10 +35,11 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.5",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^0.1002.0",
+    "@angular/cli": "^10.2.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
