--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "path": "^0.12.7",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^2.5.207",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "typescript": "~3.9.5",
